# prototype_chameleon_mcp_workflow

./: .env.example  .gitignore  BETA_REFACTORING_IMPLEMENTATION_SUMMARY.md  BETA_REFACTORING_VALIDATION_GUIDE.md  CONTRIBUTING.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  Implementation Prompts.md  PHASE_1_CODE_CHANGES.md  PHASE_1_COMPLETION_STATUS.md  PHASE_1_PILOT_IMPLEMENTATION.md  PHASE_1_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_2_EXECUTION_SUMMARY.md  PHASE_2_JWT_RBAC_COMPLETE.md  PHASE_2_PERSISTENCE_INDEX.md  PHASE_2_PERSISTENCE_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_2_TO_PHASE_3.md  PHASE_3_DELIVERY_PACKAGE.md  PHASE_3_IMPLEMENTATION_STATUS.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_3_PRIORITY_2_COMPLETE.md  PHASE_3_PRIORITY_3_COMPLETE.md  PHASE_3_PRIORITY_4_COMPLETE.md  PHASE_3_PRIORITY_4_TEST_RESULTS.md  PHASE_3_QUICK_REFERENCE.md  PHASE_3_ROADMAP.md  PRIORITY_4_IMPLEMENTATION_SUMMARY.md  Project Readme.md  QUICK_START_VALIDATION.md  README.md  SEMANTIC_GUARD_DELIVERABLES.md  SEMANTIC_GUARD_DEPLOYMENT_READY.md  SEMANTIC_GUARD_INDEX.md  SEMANTIC_GUARD_QUICK_REFERENCE.md  SEMANTIC_GUARD_SUMMARY.md  TESTING_STRATEGY.md  (+19 more)
.github/: copilot-instructions.md
chameleon_workflow_engine/: README.md  SERVER_PROMPT.md  __init__.py  advanced_guardianship.py  dsl_evaluator.py  engine.py  interactive_dashboard.py  jwt_utils.py  pilot_interface.py  provider_router.py  rbac.py  semantic_guard.py  server.py  stream_broadcaster.py
common/: README.md  config.py
database/: Database Schema Specification.md  README.md  README_NEW.md  Workflow Constitution.md  __init__.py  enums.py  intervention_store_sqlalchemy.py  (+10 more)
(+139 files in other folders)
